v0.1.1 changed all instances of Math to StrictMath made more things from updateOnFrame long instead of double cached sin and cos made methods for atan2 and sqrt that are faster but less accurate made titlescreen exit dialogue work made sound work again changed how unit collisions work added frame time to performanceStorage various bugfixes and performance enhancements